slide background index

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <!--termina mi navbar  -->
     </header>  
     
-    <main class="mainIndex"></main>
+    <main class="mainIndex" id="slideBg"></main>
 
     
 <!-- arranca mi footer -->
