--- a/pages/sobre_mi.html
+++ b/pages/sobre_mi.html
@@ -84,7 +84,7 @@
         <main class="mainSobreMi">
             
             <div class="cajaMain fotoMia">
-                <img src="../media/img/IMG_7105.jpg" class=".img-fluid" alt="FotoSobreMiPersona"> 
+                <img src="../media/img/IMG_7105.jpg" class="img-fluid" alt="FotoSobreMiPersona"> 
             </div>
                 
             <div class="cajaMain texto1">    
