--- a/pages/presentacion.html
+++ b/pages/presentacion.html
@@ -7,13 +7,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sobre Mi</title>
     <link rel="shortcut icon" href="../media/img/PPG_ICO.ico">
+    <script src="../js/presentacion.js"></script>
     <link rel="stylesheet" href="../style/presentacion.css">
     
 </head>
 <body>
     
 
-        <div class="container">
+        <div class="container loader">
             <div class="box">
 
                 <div class="title">
