segunda entrega del proyecto final

--- a/pages/experiencia.html
+++ b/pages/experiencia.html
@@ -14,9 +14,9 @@
     <header class="headerOficial">
 
         <a id="logo" href="../index.html"><img src="../media/img/ppg_inicial.png"></a>
-
-        <nav>
     <!--arranca mi navbar  -->
+        <nav>
+    
             <ul>
 
                 <li><a  href="../index.html">Inicio</a></li>
@@ -63,7 +63,7 @@
         </div>
     <!-- fin navbar mobile -->
     </header>  
-
+        <!-- arranca main experiencia -->
         <main class="mainExperiencia">
             
 
@@ -114,7 +114,7 @@
                 <div class="foto9"></div>
 
         </main>
-
+        <!-- fin main eperiencia -->
 
 
 
