--- a/index.html
+++ b/index.html
@@ -18,7 +18,6 @@
     <a id="logo" href="index.html"><img src="./media/img/ppg_inicial.png"></a>
     <!--arranca mi navbar  -->
     <nav>
-        
         <ul>
             <li><a  href="index.html">Inicio</a></li>
             <li><a  href="./pages/sobre_mi.html">Sobre Mi</a></li>
@@ -67,21 +66,21 @@
 </footer>
 <!-- fin del footer -->
 <!-- inicio pantalla carga -->
-            <div class="container loader">
-                <div class="box">
+<div class="container loader">
+    <div class="box">
 
-                    <div class="title">
-                        <span class="block"></span>
-                        <h1>Pablo P. Gómez<span></span></h1>
-                    </div>
+        <div class="title">
+            <span class="block"></span>
+            <h1>Pablo P. Gómez<span></span></h1>
+        </div>
 
-                    <div class="role">
-                        <div class="block"></div>
-                        <p>photographer</p>
-                    </div>
+        <div class="role">
+            <div class="block"></div>
+            <p>fotógrafo</p>
+        </div>
 
-                </div>
-            </div>
+    </div>
+</div>
 <!-- fin pantalla carga -->
 
 
