--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PPG Fotografía</title>
-    <meta name="description" content="web de fotografia dedicada al periodismo desde mi punto de vista">
-    <meta name="keywords" content="fotografia, fotos, periodismo">
+    <meta name="description" content="Web de fotografía dedicada a mis proyectos y periodismo independiente.">
+    <meta name="keywords" content="fotografía, fotos, periodismo, fotógrafo en berlin, fotografía periodística,">
     <link rel="shortcut icon" href="./media/img/PPG_ICO.ico">
     <script src="./js/main.js"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css" integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
