agregando seo y sass a todo el proyecto

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 <header>
 
-    <a id="logo" href="index.html"><img src="./media/img/ppg_inicial.png"></a>
+    <a id="logo" href="index.html"><img src="./media/img/ppg_inicial.png" alt="logo"></a>
     <!--arranca mi navbar  -->
     <nav>
         <ul>
