--- a/pages/sobre_mi.html
+++ b/pages/sobre_mi.html
@@ -5,6 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sobre Mi</title>
+    <meta name="description" content="Soy Pablo Perez Gomez, fotógrafo periodístico chileno, viviendo en estos momentos en Berlin.">
+    <meta name="keywords" content="Pablo Perez Gomez, Chile, Berlin, periodismo fotográfico, fotografiá periodística, periodismo en Berlin, journalist">
     <link rel="shortcut icon" href="../media/img/PPG_ICO.ico">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css" integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
     <link rel="stylesheet" href="../style/sobre_mi.css">
@@ -66,10 +68,9 @@
     </div>
 
     <div class="cajaMain texto1">    
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Iste voluptatem unde vel consectetur laborum aspernatur ut accusantium pariatur. Tempora eaque iusto unde beatae error id accusantium aliquid, totam vitae neque.
+        <p>Hola, soy Pablo, Comunicador Audiovisual titulado en el año 2004 de la Escuela de Comunicación Audiovisual DUOC, Universidad Católica de Chile, sede San Carlos de Apoquindo, en mis 32 años eh desarrollado una prometedora y exitosa carrera como fotógrafo y realizador audiovisual especializado en el Caballo Chileno y las vida y tradiciones de la cultura campesina. 
         <br>
-        Tenetur voluptatem voluptates exercitationem eligendi repudiandae esse quae molestias ea praesentium cumque, maiores quisquam quo autem repellendus magnam dolor unde facere aperiam iusto ut soluta.
-        Tenetur voluptatem voluptates exercitationem eligendi repudiandae esse quae molestias ea praesentium cumque, maiores quisquam quo autem repellendus magnam dolor unde facere aperiam iusto ut soluta.
+        Abraze la profesión de comunicador motivado por mi padre, destacado realizador, fotógrafo y escritor, con quien desde pequeño me introdujo en paisajes de Chile entero desde el Desierto de Atacama hasta los hielos del fin del mundo, en Magallanes, además de los potreros donde se crian los caballos de la raza nacional. Así acabe por formarme cámara en mano a su lado empezando a trabajar siendo un adolescente en la edición gráfica de los anuarios y libros que se realizan en la editorial.
         </p>
 
     </div> 
