--- a/pages/galeria.html
+++ b/pages/galeria.html
@@ -59,13 +59,16 @@
     <!-- fin navbar mobile -->
     </header>  
 <main class="mainGaleria">    
-    <div class="foto foto1"></div>
-    <div class="foto foto2"></div>
-    <div class="foto foto3"></div>
-    <div class="foto foto4"></div>
-    <div class="foto foto5"></div>
-    <div class="foto foto6"></div>                                              
-</main>
+    <img class="foto foto1" src="../media/img/IMG_8844.JPG" alt="chernobyl">
+    <img class="foto foto2" src="../media/img/IMG_3476.JPG" alt="mascarasChernobyl"></img>
+    <img class="foto foto3" src="../media/img/IMG_2345.JPG" alt="alexanderplatz"></img>
+    <img class="foto foto4" src="../media/img/IMG_9234.JPG" alt="personaPalestina"></img>
+    <img class="foto foto5" src="../media/img/IMG_3733.JPG" alt="vueltaAlMundoChernobyl"></img>
+    <img class="foto foto6" src="../media/img/IMG_2543.JPG" alt="auschwitz"></img>
+    <img class="foto foto7" src="../media/img/IMG_9710.JPG" alt="antenaHamburgo"></img>
+    <img class="foto foto8" src="../media/img/IMG_1932.jpg" alt="protestasChile"></img>
+    <img class="foto foto9" src="../media/img/IMG_0239.JPG" alt="edificioChernobyl"></img>
+</main> 
 
 <!-- arranca mi footer -->
 <footer class="foot">
