--- a/pages/experiencia.html
+++ b/pages/experiencia.html
@@ -62,14 +62,12 @@
 <main class="mainExperiencia">
     <div class="textoFilo">
         <h2>Mi Filosofía</h2>
-        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nemo harum voluptas sapiente ex similique eos veritatis, 
+        <p>Cada momento es único y tiene distintas formas de mirarlo. 
+        <br>Yo te lo muestro desde la fotografiá, lo que mas me gusta hacer. Mi objetivo es crear fotos de una manera discreta y hacer que ese momento quede guardado.
         <br>
-        possimus doloremque minima corrupti expedita perferendis perspiciatis vitae. Fugit voluptas porro autem quod corporis!
         <br>
-        Accusantium eos blanditiis ut impedit beatae fuga officia obcaecati 
-        <br>assumenda sit ullam, qui ducimus quas consequatur amet totam ratione. 
-        <br>
-        Quibusdam, excepturi cum. Non, quae quod blanditiis delectus et laboriosam officia.</p>
+        <br>“La fotografía ayuda a las personas a ver”. Berenice Abbott
+        </p>
     </div>
     <div class="foto7"></div>
     <div class="textoPro">
@@ -80,19 +78,17 @@
     <div class="foto8"></div>
     <div class="textoMi">
         <h2>Lo que puedes esperar de mi</h2>
-        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
+        <p>Tengo una mirada dedicada al periodismo y me gusta que realmente puedan ver lo que yo veo, que se sientan parte del momento que estoy fotografiando.
         <br>
-        Vitae quos atque quaerat maxime? Distinctio pariatur facilis quae eligendi aperiam id vel? 
         <br>
-        Provident quasi vero iure cumque sit, aliquam reiciendis et?
+        Mi objetivo es brindarles una experiencia completa desde que comienzo mi trabajo hasta que lo finalizo.
         <br>
-        Autem, ea eum mollitia cupiditate minima asperiores eaque delectus amet soluta laboriosam quam doloribus laborum aspernatur suscipit at tenetur commodi praesentium voluptatum culpa sequi illo! 
-        <br>
-        Quisquam vel beatae officia possimus!</p>
+        Voy a brindarles una cobertura total del trabajo con su respectiva edición.
+        </p>
     </div>
     <div class="foto9"></div>
 </main>
-<!-- fin main eperiencia -->
+<!-- fin main experiencia -->
 <!-- arranca mi footer -->
 <footer class="foot">
     <div class="cajaDatos">
