--- a/pages/sobre_mi.html
+++ b/pages/sobre_mi.html
@@ -68,9 +68,9 @@
     </div>
 
     <div class="cajaMain texto1">    
-        <p>Hola, soy Pablo, Comunicador Audiovisual titulado en el año 2004 de la Escuela de Comunicación Audiovisual DUOC, Universidad Católica de Chile, sede San Carlos de Apoquindo, en mis 32 años eh desarrollado una prometedora y exitosa carrera como fotógrafo y realizador audiovisual especializado en el Caballo Chileno y las vida y tradiciones de la cultura campesina. 
+        <p>Hola, soy Pablo, Comunicador Audiovisual titulado en el año 2004 de la Escuela de Comunicación Audiovisual DUOC, Universidad Católica de Chile, sede San Carlos de Apoquindo, en mis 32 años he desarrollado una prometedora y exitosa carrera como fotógrafo y realizador audiovisual especializado en el Caballo Chileno y las vida y tradiciones de la cultura campesina. 
         <br>
-        Abraze la profesión de comunicador motivado por mi padre, destacado realizador, fotógrafo y escritor, con quien desde pequeño me introdujo en paisajes de Chile entero desde el Desierto de Atacama hasta los hielos del fin del mundo, en Magallanes, además de los potreros donde se crian los caballos de la raza nacional. Así acabe por formarme cámara en mano a su lado empezando a trabajar siendo un adolescente en la edición gráfica de los anuarios y libros que se realizan en la editorial.
+        Abrace la profesión de comunicador motivado por mi padre, destacado realizador, fotógrafo y escritor, con quien desde pequeño me introdujo en paisajes de Chile entero desde el Desierto de Atacama hasta los hielos del fin del mundo, en Magallanes, además de los potreros donde se crían los caballos de la raza nacional. Así acabe por formarme cámara en mano a su lado empezando a trabajar siendo un adolescente en la edición gráfica de los anuarios y libros que se realizan en la editorial.
         </p>
 
     </div> 
